<resources>
    <string name="app_name">Tinkoff Messenger</string>
    <string name="example_time">12:35</string>
    <string name="example_name">Ed Sheeran</string>
    <string name="example_message">Not afraid to be yourself.</string>
    <string name="add_emoji_button">Add emoji button</string>
    <string name="send_message_or_attach_a_photo_button">Send message or attach a photo button</string>
    <string name="profile_photo">Profile photo</string>
    <string name="example_date">21 July</string>
    <string name="type_something">Type something…</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="example_status">In a meeting</string>
    <string name="online">online</string>
    <string name="example_email">edsheeran@company.com</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="example_count_messages">1240 mes</string>
    <string name="example_search_users">Users…</string>
    <string name="testing">Testing</string>
    <string name="expand_channel_to_see_topics">Expand channel to see topics</string>
    <string name="example_channels_search_hint">Channels…</string>
    <string name="network_error">Network error.\nCheck internet connection</string>
    <string name="empty_error">Тут ничего нет</string>
    <string name="retry">Повторить</string>
    <string name="logout_button">logout button</string>
    <string name="sending_message_dialog_error">Unfortunately, we can\'t send \nyour message to the server. \nPlease check your internet \nconnection and retry.</string>
    <string name="editing_message_dialog_error">Unfortunately, we can\'t edit \nyour message. \nPlease check your internet \nconnection and retry.</string>
    <string name="change_topic_dialog_error">Unfortunately, we can\'t change topic of\nyour message. \nPlease check your internet \nconnection and retry.</string>
    <string name="deleting_message_dialog_error">Unfortunately, we can\'t delete \nyour message from the server. \nPlease check your internet \nconnection and retry.</string>
    <string name="add_emoji_dialog_error">Unfortunately, we can\'t send \nyour reaction to the server. \nPlease check your internet \nconnection and retry.</string>
    <string name="delete_emoji_dialog_error">Unfortunately, we can\'t delete \nyour reaction from the server. \nPlease check your internet \nconnection and retry.</string>
    <string name="add_reaction">Поставить реакцию</string>
    <string name="delete_message">Удалить сообщение</string>
    <string name="edit_message">Отредактировать сообщение</string>
    <string name="change_topic">Поменять топик у сообщения</string>
    <string name="copy_message">Скопировать в буфер обмена</string>
    <string name="enter_new_topic_name">Введите новое имя топика</string>
    <string name="null_bottom_sheet_dialog">BottomSheetDialogLayoutBinding = null</string>
    <string name="null_chat_fragment_binding">FragmentChatBinding = null</string>
</resources>
