<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/shimmer_layout_profile"
        layout="@layout/shimmer_layout_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="@dimen/profile_photo_dimension"
            android:layout_height="@dimen/profile_photo_dimension"
            android:layout_gravity="center"
            android:background="@drawable/imageview_profile_circle_radius"
            android:contentDescription="@string/profile_photo"
            android:maxWidth="@dimen/profile_photo_dimension"
            android:maxHeight="@dimen/profile_photo_dimension"
            tools:src="@drawable/ed" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin10dp"
            android:layout_marginTop="@dimen/margin10dp"
            android:layout_marginRight="@dimen/margin10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize24sp"
            tools:text="@string/example_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_profile_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize16sp"
                tools:text="@string/example_status" />

            <TextView
                android:id="@+id/tv_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10dp"
                android:textColor="@color/neon_green"
                android:textSize="@dimen/textSize16sp"
                tools:text="@string/online" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_error_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

    <include
        android:id="@+id/empty_layout"
        layout="@layout/layout_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding40dp"
        android:paddingTop="@dimen/padding10dp"
        android:paddingRight="@dimen/padding40dp"
        android:paddingBottom="@dimen/padding10dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:theme="@style/Theme.BtnLogout"
        android:visibility="invisible"
        app:cornerRadius="@dimen/btn_logout_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>
